--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -43,7 +43,7 @@ jobs:
       - name: deploy to itch.io
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
-          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_API_KEY }}
+          BUTLER_CREDENTIALS: ${{ secrets.ITCH_API_KEY }}
           CHANNEL: html
           ITCH_GAME: creeps3
           ITCH_USER: stewchan
